# kitchen

./: .kitchen.toml  .kitchenenv  CLAUDE.md  Cargo.toml  Dockerfile  README.md  init.sh  kitchen
fixtures/compose-test/: .kitchen.toml
fixtures/test-basic/: .kitchen.toml
fixtures/test-compose/: .kitchen.toml  docker-compose.yml
fixtures/testws/: .kitchen.toml  README.md
plans/: 04272026-container-init-dotfiles.md  05012026-cmd-run_script.md  20260426-docker-run.md  20260429-dynamic-extensions.md
poc/: Dockerfile  init.sh  kitchen
resources/: Dockerfile  init.sh
resources/pitchfork/: onstart.sh
resources/provision/: dotfiles.sh
resources/tailscale/: pitchfork.toml  poststart.sh  provision.sh
src/: cmd.rs  config.rs  container.rs  image.rs  kitchen.rs  main.rs
src/container/: mod.rs  shell.rs
src/extensions/: dotfiles.rs  mise.rs  mod.rs  pitchfork.rs  tailscale.rs
src/provision/: dotfiles.rs  mod.rs
