[package]
name = "kitchen"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.20.2"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.28"
flate2 = "1.1.9"
futures-util = "0.3.32"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tar = "0.4.45"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "signal"] }
tokyo = "1.0.0"
use = "0.0.1-pre.0"
async-trait = "0.1.89"
subst = "0.3.8"
